--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "userbot-100101110",
-  "logo": "https://www.toptenz.net/wp-content/uploads/2019/01/red-dragon-3235672_640.jpg",
-  "repository": "https://github.com/100101110/userbot-100101110",
+  "logo": "https://telegra.ph/file/009056ae46badc2280759.jpg",
+  "repository": "https://github.com/MarvynSTAR/OOF-UserBot",
   "env": {
     "ENV": {
       "description": "NON MODIFICARE serve per attivare Heroku.",
